fixed centering issues on mobile slider

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,12 +30,11 @@ body {
 
 .slick-track {
   display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 30px;
+  margin: 20px 0;
 }
-
-
-
 
 .big-pic-container {
   display: flex !important;
